# template-rust-backend

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: Cargo.toml  lib.rs  m20240101000001_create_tenants.rs  m20240101000002_create_users.rs
src/: api_doc.rs  lib.rs  main.rs
src/config/: app.rs  cors.rs  database.rs  mod.rs
src/db/: mod.rs
src/enums/: mod.rs  tenant_status.rs  user_role.rs  user_status.rs
src/handlers/: health.rs  mod.rs
src/handlers/auth/: login.rs  mod.rs  refresh.rs  register.rs
src/handlers/tenants/: get_tenant.rs  get_tenants.rs  mod.rs
src/handlers/users/: change_role.rs  change_status.rs  get_user.rs  get_users.rs  me.rs  mod.rs
src/middleware/: auth.rs  mod.rs  tracing_middleware.rs  validation.rs
src/models/: common.rs  mod.rs  tenants.rs  users.rs
src/routes/: mod.rs
src/services/: auth_service.rs  mod.rs  tenants_service.rs  users_service.rs
src/utils/: auth.rs  error.rs  mod.rs
tests/: auth_service_test.rs  lib.rs  validation_test.rs
tests/common/: mod.rs
tests/integration/: auth.rs  health.rs  mod.rs  tenants.rs  users.rs
