[package]
name = "template-rust-backend"
version = "0.1.0"
edition = "2024"
keywords = ["graphql", "api", "rust", "axum", "seaorm"]

[[bin]]
name = "template-rust-backend"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "2.0.0-rc.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["password-hash"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
migration = { path = "migration" }
sea-orm-migration = "2.0.0-rc.10"
urlencoding = "2.1"
[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"] }
mockall = "0.12"

