[package]
name = "template-rust-backend"
version = "0.1.0"
edition = "2024"
keywords = ["graphql", "api", "rust", "axum", "seaorm"]

[[bin]]
name = "template-rust-backend"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "2.0.0-rc.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["password-hash"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
validator = { version = "0.18", features = ["derive"] }
migration = { path = "migration" }
sea-orm-migration = "2.0.0-rc.10"
urlencoding = "2.1"
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt", "run-cargo-test"] }
mockall = "0.12"
tokio-test = "0.4"
axum-test = "9.0"

