[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = "2.0.0-rc.10"
async-trait = "0.1"
sea-orm = { version = "2.0.0-rc.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = "0.4"
